@startuml consent-status
' consentStatus — the vocabulary SRC-IG §14.15 fixes, with the transitions of §4.14.2.
' PROPOSAL generated by AI. The value set is a fact; which transition the recurring side effect
' takes is contested (Q-20, C-01), and revokedByPsu has no trigger in this design (C-07, D-09).
title consentStatus (SRC-IG §14.15) — INV-CNS-01

[*] --> received : consent resource created
received --> valid : authorisation finalised
received --> rejected : authorisation failed or declined
received --> partiallyAuthorised : multilevel SCA (unscheduled, Q-41)
partiallyAuthorised --> valid : last authorisation finalised
partiallyAuthorised --> rejected : an authorisation failed
valid --> expired : validUntil passed
valid --> terminatedByTpp : DELETE /v1/consents/{id}
valid --> revokedByPsu : the PSU revokes towards the ASPSP
valid --> expired : replaced by a new recurring consent
valid --> terminatedByTpp : replaced by a new recurring consent
rejected --> [*]
expired --> [*]
terminatedByTpp --> [*]
revokedByPsu --> [*]

note right of revokedByPsu
  No surface triggers this transition.
  SRC-ADR gives the consent screen to
  the TPP, whose withdrawal is
  terminatedByTpp. C-07, D-09.
end note

note bottom
  The two transitions labelled "replaced by a new recurring consent"
  are the same event: §6.3.1.1 calls it expiry, §4.14.2 calls it
  terminatedByTpp. Both are drawn because the specification says both.
  C-01, Q-20.
end note
@enduml
